Updated projects and fixed alignment

--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,80 @@ button {
   background: none;
 }
 
+@font-face {
+  font-family: "icomoon";
+  src: url("../fonts/icomoon.eot?xiysxq");
+  src: url("../fonts/icomoon.eot?xiysxq#iefix") format("embedded-opentype"), url("../fonts/icomoon.ttf?xiysxq") format("truetype"), url("../fonts/icomoon.woff?xiysxq") format("woff"), url("../fonts/icomoon.svg?xiysxq#icomoon") format("svg");
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+[class^=icon-],
+[class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: "icomoon" !important;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  vertical-align: middle;
+  margin: 0 5px;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-blender:before {
+  content: "\e907";
+  color: #f5792a;
+}
+
+.icon-adobeillustrator:before {
+  content: "\e908";
+  color: #ff7c00;
+}
+
+.icon-adobephotoshop:before {
+  content: "\e909";
+  color: #00c8ff;
+}
+
+.icon-unrealengine:before {
+  content: "\e900";
+}
+
+.icon-mysql:before {
+  content: "\e901";
+  color: #4479a1;
+}
+
+.icon-php:before {
+  content: "\e902";
+  color: #777bb4;
+}
+
+.icon-javascript:before {
+  content: "\e903";
+  color: #f7df1e;
+}
+
+.icon-sass:before {
+  content: "\e904";
+  color: #c69;
+}
+
+.icon-css3:before {
+  content: "\e905";
+  color: #1572b6;
+}
+
+.icon-html5:before {
+  content: "\e906";
+  color: #e34f26;
+}
+
 .grid {
   display: grid;
   background-color: #333645;
@@ -358,6 +432,7 @@ header .heading .scroll-down {
 .title-heading {
   display: flex;
   justify-content: center;
+  padding: 0 10px;
   margin: 20px 0;
 }
 
@@ -365,6 +440,7 @@ header .heading .scroll-down {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  padding: 0 10px;
   margin: 20px 0;
 }
 
@@ -388,6 +464,7 @@ header .heading .scroll-down {
   align-items: center;
   position: relative;
   top: 0;
+  height: 400px;
   text-align: center;
   color: #333645;
   background-color: #fff;
@@ -423,11 +500,28 @@ header .heading .scroll-down {
 .projects-container .item .card-img {
   max-width: 250px;
   max-height: 250px;
+  border-radius: 6px;
 }
-.projects-container .item .card h3,
+.projects-container .item .card h2 {
+  font-size: 26px;
+  font-weight: 600;
+}
+.projects-container .item .card h2,
 .projects-container .item .card p {
   margin-top: 10px;
   margin-bottom: 0;
+}
+.projects-container .item .card h2:nth-child(3n), .projects-container .item .card h2:nth-child(4n),
+.projects-container .item .card p:nth-child(3n),
+.projects-container .item .card p:nth-child(4n) {
+  margin-top: auto;
+}
+.projects-container .item .card em {
+  font-size: 14px;
+  margin-top: auto;
+}
+.projects-container .item .card em span {
+  font-weight: 600;
 }
 @media (min-width: 576px) {
   .projects-container .item .card {
@@ -436,7 +530,7 @@ header .heading .scroll-down {
 }
 @media (min-width: 576px) {
   .projects-container .item {
-    width: 350px;
+    width: 400px;
   }
 }
 @media (min-width: 576px) {
