--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -71,6 +71,7 @@
 .title-heading {
   display: flex;
   justify-content: center;
+  padding: 0 10px;
   margin: 20px 0;
 }
 
@@ -78,6 +79,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  padding: 0 10px;
   margin: 20px 0;
 }
 
@@ -104,6 +106,7 @@
       align-items: center;
       position: relative;
       top: 0;
+      height: 400px;
       text-align: center;
       color: $brand-primary;
       background-color: $white;
@@ -126,12 +129,32 @@
       &-img {
         max-width: 250px;
         max-height: 250px;
+        border-radius: 6px;
       }
 
-      & h3,
+      & h2 {
+        font-size: 26px;
+        font-weight: 600;
+      }
+
+      & h2,
       p {
         margin-top: 10px;
         margin-bottom: 0;
+
+        &:nth-child(3n),
+        &:nth-child(4n) {
+          margin-top: auto;
+        }
+      }
+
+      & em {
+        font-size: 14px;
+        margin-top: auto;
+
+        & span {
+          font-weight: 600;
+        }
       }
 
       @include mq('xs') {
@@ -140,7 +163,7 @@
     }
 
     @include mq('xs') {
-      width: 350px;
+      width: 400px;
     }
   }
 
